# databricks-multi-tenant-billing

./: .gitignore  README.md  app.py  app.yaml  config.py  helpers.py  main.py  pyproject.toml  rag_core.py  requirements.txt
notebook/: 임베딩.ipynb
saas_billing_analytics/: .gitignore  README.md  databricks.yml  pyproject.toml
saas_billing_analytics/resources/: saas_billing_analytics_etl.pipeline.yml  sample_job.job.yml
saas_billing_analytics/src/: sample_notebook.ipynb
saas_billing_analytics/src/saas_billing_analytics/: main.py  rag_billing.py
saas_billing_analytics/src/saas_billing_analytics_etl/: README.md
saas_billing_analytics/src/saas_billing_analytics_etl/fx/: fx_streaming_ingest.py
saas_billing_analytics/src/saas_billing_analytics_etl/tables/: billing_fx_streaming.py
saas_billing_analytics/src/saas_billing_analytics_etl/transformations/: billing_bronze.py  billing_gold.py  billing_silver.py
saas_billing_analytics/src/saas_billing_analytics_etl/views/: billing_views.py  fx_view.py
saas_billing_analytics/tests/: sample_taxis_test.py
sdk/: rag.py  test.py
sql/: 01-임베딩값저장할테이블.sql
