[project]
name = "databricks-multi-tenant-billing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "databricks-sdk>=0.73.0",
    "databricks-sql-connector[pyarrow]>=4.1.4",
    "databricks-vectorsearch>=0.63",
    "mlflow>=3.6.0",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.12.0",
    "pyspark>=4.0.1",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
